refactor: Schema API unification